fix flex wrap gaps

--- a/styles.css
+++ b/styles.css
@@ -66,11 +66,12 @@ body {
 
 .tube {
     height: 260px;
-    max-width: 80px;
+    width: 80px;
     padding: 15px 15px 0 15px;
-    margin: 0 25px;
+    margin: 25px;
+    gap: 0;
     background-color: silver;
-    flex: 1;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     justify-content: end;
